--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,19 @@
 # RehabSense Backend Dependencies
-# Python 3.10+ required
+# Python 3.13+ compatible
 
 # Web Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-websockets==12.0
-python-multipart==0.0.6
+fastapi==0.129.0
+uvicorn[standard]==0.41.0
+websockets==16.0
+python-multipart==0.0.22
 
 # Computer Vision & Pose Detection
-opencv-python==4.8.1.78
-mediapipe==0.10.8
+opencv-python==4.12.0.88
+# mediapipe==0.10.30  # Using fallback detection - uncomment if MediaPipe is fixed
 
 # Data Processing
-numpy==1.24.3
-pydantic==2.5.0
+numpy==2.2.6
+pydantic==2.12.5
 
 # Utilities
-typing-extensions==4.8.0
+typing-extensions >= 4.14.1
